cmake_minimum_required(VERSION 3.14)
project("neuron" CXX)
set(INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/include)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
list(APPEND CMAKE_MODULE_PATH 	${PROJECT_SOURCE_DIR}/cmake)
include(ExternalSpdlog)
add_subdirectory(src)
