add_executable (${NEURON_TARGET} main.cpp)
add_dependencies(${NEURON_TARGET} spdlog_lib)
list(APPEND NEURON_INCLUDE_DIRS ${INCLUDE_DIRECTORIES})
list(APPEND NEURON_INCLUDE_DIRS ${SPDLOG_INSTALL_DIR}/include)
list(APPEND NEURON_LIB_DIRS ${SPDLOG_INSTALL_DIR}/lib)
list(APPEND NEURON_LINK_LIBS ${MATH_TARGET})
list(APPEND NEURON_LINK_LIBS spdlog)
target_include_directories(${NEURON_TARGET} PRIVATE ${NEURON_INCLUDE_DIRS})
target_link_directories(${NEURON_TARGET} PRIVATE ${NEURON_LIB_DIRS})
target_link_libraries(${NEURON_TARGET} PRIVATE ${NEURON_LINK_LIBS})
